--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/swipeLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".FragmentOne"
              android:background="@color/colorFragmentOneBG">
 
     <ListView
@@ -11,4 +11,4 @@
             android:layout_height="match_parent"
             android:id="@+id/list"/>
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
